# NOTE: scikit-build-core doesn't use the root-level CMakeLists.txt file,
#       instead we have it use src/python/CMakeLists.txt.
#
# There are 2 reasons for placing this at the root-level directory
# (rather than in src/python):
#   1. it ensures that the source-distribution of our source-directory and the
#      SDist we'll eventually distribute via PyPI will have the same structure
#   2. it ensures that gracklepy can be installable by invoking
#      pip install gracklepy @ git+https://github.com/grackle-project/grackle

[build-system]
requires=[
  "cython",
  "cython-cmake>=0.2",
  # since tool.scikit-build.minimum-version is set to "build-system.requires",
  # the minimum build-requirement for scikit-build-core controls some default
  # behaviors when newer versions of scikit-build-core are installed
  # (we should keep an eye on this and keep increasing it over time)
  "scikit-build-core>=0.10"
]
build-backend = "scikit_build_core.build"

[project]
name = "gracklepy"
description = "A wrapper for the Grackle chemistry library"
readme = "README.rst"
# A simpler project could infer used to infer the version number from git:
#    https://scikit-build-core.readthedocs.io/en/latest/configuration.html#dynamic-metadata
# but gracklepy can't (currently) do this since it lives in a "monorepo"
#    https://github.com/pypa/setuptools_scm/issues/1056
version = "1.1.1.dev1"
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
keywords=[
  "simulation", "chemistry", "cooling", "astronomy", "astrophysics"
]
requires-python = ">=3.10"
dependencies = [
  'h5py',
  'numpy',
  'matplotlib',
  'yt>=4.0.2'
]

[project.license]
text = "BSD 3-Clause"

[project.urls]
Homepage = 'https://github.com/grackle-project/grackle'
Documentation = 'https://grackle.readthedocs.io/'
Source = 'https://github.com/grackle-project/grackle'
Tracker = 'https://github.com/grackle-project/grackle/issues'

[project.optional-dependencies]
# currently the next line duplicates the dependency-groups purely for
# historical reasons. We should delete the following entry in the near-future
# (since they are actually dependencies of the gracklepy-wheel).
dev = ['packaging', 'pytest', 'sphinx', 'sphinx-tabs', 'furo']

[dependency-groups]
docs = ['sphinx', 'sphinx-tabs', 'furo']
test = ['pytest', 'packaging']
dev = [{include-group = "docs"}, {include-group = 'test'}]

[tool.pytest.ini_options]
# settings inspired by: learn.scientific-python.org/development/guides/pytest/
#  -ra: The -r tells pytest to report extra test summary info on the events
#       corresponding to all characters following the r. Here, the "a"
#       corresponds to "all" events (other than passing tests)
#  --showlocals: directs pytest to show local variables in tracebacks
#  --strict-markers: ensures we don't try to use an unspecified fixture
#  --string-config: all configuration mistakes are reported as errors
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
# by default, we treat any test marked xfail that doesn't fail as an error
# (we can override this locally, if necessary)
xfail_strict = true
# limit the directories searched by pytests for the test files
testpaths = [
  "src/python/tests",
]


[tool.scikit-build]
# redirect to the appropriate CMakeLists.txt file
cmake.source-dir = "./src/python"

# if the version of CMake (in {cmake.source-dir}/CMakeLists.txt) isn't found,
# scikit-build-core will download and use a compatible CMake-verison
cmake.version = "CMakeLists.txt"

# The build type to use when building the project. Valid options are: "Debug",
# "Release", "RelWithDebInfo", "MinSizeRel", "", etc.
cmake.build-type = "Release"

# since this is set, this provides a method for backward compatibility.
minimum-version = "build-system.requires"

# The following are all packaging-related and may require tweaking

# Files to exclude from the SDist (even if they're included by default).
# Supports gitignore syntax.
sdist.exclude = [
    # exclude continuous integration:
    ".circleci", ".readthedocs.yml", ".github",
    # exclude files related to creating precompiled wheels
    "scripts/wheels",
    # exclude data files since we want the sdist to follow the same rules as wheels
    # when it comes to data file distribution (for simplicity).
    # -> the main value of including the files would be if somebody wanted to download
    #    the sdist, untar it, and run tests. But, I would argue that they should be
    #    cloning the git repository for that purpose
    # -> this would also make the sdist ~65 times bigger
    "input", "grackle_data_files",
    # if we aren't including data-files, there's no reason to include gracklepy-tests
    # (all meaningful tests will currently fail)
    "src/python/tests",
    # if we aren't including data-files, there's no reason to include the gracklepy
    # code examples (they currently require editable installations)
    "src/python/examples",
    # for consistency, we exclude the core-library tests and examples
    "tests", "src/example",
    # exclude miscellaneous classic-build-system machinery
    "configure", "src/Makefile", "src/examples/Make*", "src/clib/Make*"
]

# A list of packages to auto-copy into the wheel.
wheel.packages = ["./src/python/gracklepy"]

# A set of patterns to exclude from the wheel. This is additive to the SDist
# exclude patterns.
wheel.exclude = [
    # Per the discussion in gh-220, we have decided not to package pyd files
    # (at least for right now)
    "**.pyd",
    # No need to package template files
    "**.py.in"
]

[[tool.scikit-build.overrides]]
# we are using scikit-build-core's override-functionality to provide a detailed
# error message when a build from a sdist fails
if.from-sdist = true
# maybe we should move most of this message to the website and provide a link
# to the website
messages.after-failure = """
{bold.red}Your build of gracklepy from a sdist failed.{normal} (You should
ignore the rest of this message if you were explicitly want to install from an
sdist).

For more context:

- The sdist and wheel formats are the 2 modern standardized formats for python
  package distribution. At a high-level, both of them handle a package's python
  code in a similar manner. The largest differences occurs when packages (like
  grackle) have extension modules, written in compiled languages (like C).
  1. A sdist (source-distribution) includes the extension modules' source code.
     When installing an sdist, your package manager (e.g. pip) directly compiles
     the extension module & links it against dependencies, as part of process.
  2. A wheel ships a precompiled copy of extension module (& copies of external
     dependencies). During installation, your package manager copies the
     precompiled extension module & any dependencies to the installation

- Since your package manager tried to install gracklepy from a sdist, that
  probably means that a wheel isn't available for your current python version
  on the {platform.platform} (with the {platform.machine}). If this is a common
  Unix platform, please let the us (the Grackle developers know) and we can
  consider adding wheels for this platform in the future.

- Your build probably failed because you are missing a compiler, your compiler
  is too old, you are missing a dependency (e.g. hdf5), or the build-system
  can't automatically infer some of this info.

- We recommend installing gracklepy directly from the git repository. We provide
  detailed instructions on our website (https://grackle.readthedocs.io). If you
  encounter further problems, please reach out.
"""

[tool.ruff.per-file-target-version]
# By default, ruff uses project.requires-python to infer the project-wide
# python version (certain linting/formatting options may be enabled or disabled
# based on this choice). Here, we are overwriting this version for our
# developer/build scripts
"scripts/**" = "py37"
"tests/scripts/**" = "py37"

[tool.ruff.lint]
# By default, Ruff enables Flake8's F rules, along with a subset of the E rules,
# omitting any stylistic rules that overlap with the use of a formatter, like
# ruff format
select = ["E4", "E7", "E9", "F"]
# our ignore-list is based on our old flake8 ignore-list
ignore = ["E402", "E502", "E701", "E731"]

[tool.ruff.format]
# This following option adds files to the standard set of ruff-format's
# exclusions. It contains all python files that were already part of Grackle
# before we introduced ruff
# - per our discussion in GH-#218, we aren't applying formatters to old code
#   yet (to avoid merge-conflicts)
# - We plan to "rip the bandaid off" and remove all the files from this list
#   after the next release
# - No new files should be added to this list
exclude = [
    "doc/source/conf.py",
    "scripts/configure_file.py",
    "scripts/query_version.py",
    "src/python/examples/cooling_cell.py",
    "src/python/examples/cooling_rate.py",
    "src/python/examples/freefall.py",
    "src/python/examples/yt_grackle.py",
    "src/python/gracklepy/__init__.py",
    "src/python/gracklepy/api.py",
    "src/python/gracklepy/fluid_container.py",
    "src/python/gracklepy/utilities/__init__.py",
    "src/python/gracklepy/utilities/api.py",
    "src/python/gracklepy/utilities/convenience.py",
    "src/python/gracklepy/utilities/data_path.py",
    "src/python/gracklepy/utilities/evolve.py",
    "src/python/gracklepy/utilities/misc.py",
    "src/python/gracklepy/utilities/model_tests.py",
    "src/python/gracklepy/utilities/physical_constants.py",
    "src/python/gracklepy/utilities/primordial_equilibrium.py",
    "src/python/gracklepy/utilities/testing.py",
    "src/python/gracklepy/utilities/units.py",
    "src/python/gracklepy/yt_fields.py",
    "src/python/tests/conftest.py",
    "src/python/tests/test_chemistry.py",
    "src/python/tests/test_chemistry_struct_synched.py",
    "src/python/tests/test_dynamic_api.py",
    "src/python/tests/test_get_grackle_version.py",
    "src/python/tests/test_initialisation.py",
    "src/python/tests/test_local_functions.py",
    "src/python/tests/test_models.py",
    "src/python/tests/test_primordial.py",
    "src/python/tests/test_query_units.py",
    "src/python/tests/test_specific_heating_rate.py",
    "src/python/tests/test_volumetric_heating_rate.py",
    "src/python/tests/testing_common.py",
    "tests/scripts/code_example_checker.py",
    "src/python/gracklepy/utilities/atomic.py"
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["*_i686", "*_ppc64le", "*_s390x", "*_universal2"]
# we compile high-level hdf5 api purely so we can run the test-command on musllinux
# -> h5py doesn't ship binary-wheels for that platform
# -> depending on how long h5py takes to compile, it may be better to simply use
#    test-skip = "*-musllinux*"
before-build = "python {project}/scripts/wheels/cibw_before_build.py --compile-hl-h5 3rdparty {project}"
test-groups = "test"  # <- this installs the test dependencies
test-command = "bash {project}/scripts/wheels/cibw_test_command.sh {project}"
